tests/ui/flatten_and_methods.stderr
error: methods and doc comments are not allowed for flattened entry
  --> $DIR/flatten_and_methods.rs:22:17
   |
22 |     #[structopt(short, flatten)]
   |                 ^^^^^
